# checkit_tiff

./: .gitignore  FAQ  LICENSE  README.1st_checkit  README.TIFFrisks  README.TIFFspecification  README.compile  README.cygwin  README.grammar  README.icc  README.md  README.regex  grammar.xhtml
common/: doxygen.conf  peg2pegjs.pl
example_configs/: README.txt  cit_tiff-a_whitepaper.cfg  cit_tiff6_baseline_SLUB.cfg  cit_tiff6_baseline_SLUBrelaxed.cfg  cit_tiff6_complete.cfg  cit_tiff6_geotiff_SLUB.cfg  cit_tiff6_legacy_SLUB.cfg  cit_tiff_baseline_minimal.cfg  cit_tiff_ep.cfg
src/: CMakeLists.txt  Makefile  check_helper.c  check_ifd.c  checkit_check_config.c  checkit_tiff.c  checkit_tiff_risk.c  config_parser.c  toolchain-32bit_on64.cmake  toolchain-mingw64.cmake
src/headers/: check.h  check_helper.h  check_renderer.h  config_parser.h  msg_parser.h  msg_tiffparse.h
src/helper/: check_helper.c  check_print.c  check_renderer.c  check_tiffparse.c
src/helper/renderer/: check_renderer_ansi.c  check_renderer_default.c  check_renderer_xml.c
src/ifdrules/: check_all_IFDs_are_word_aligned.c  check_all_geotiff_tags.c  check_all_offsets_are_used_once_only.c  check_all_offsets_are_word_aligned.c  check_all_offsets_greater_zero.c  check_has_only_one_ifd.c  check_tagorder.c
src/messages/: msg_parser.c  msg_tiffparse.c
src/parser/: config_dsl.grammar.c  config_dsl.grammar.peg  config_parser.c
src/risk_analyzer/: lst_offset_mappings.c
src/tagrules/: check_datetime.c  check_icc.c  check_notag.c  check_tag.c  check_tag_has_some_of_these_values.c  check_tag_has_valid_asciivalue.c  check_tag_has_valid_type.c  check_tag_has_value.c  check_tag_has_value_in_range.c  check_tag_has_value_matching_regex.c  check_tag_has_value_quiet.c  check_tag_has_valuelist.c  check_tag_quiet.c
src/validate_icc/: check_icc_header.c  validate_icc.h
t/: Testcall.pm  compare_stable_with_current_checkit_tiff.sh  minimal_256only.tiff  test_config_examples.t  test_grammar.t  test_should_fail.t  test_should_pass.t
tiffs_should_fail/: minimal_IFD_65355_tags.tif  minimal_IFD_65355_zeroedtags.tif  minimal_IFD_count_is_zero.tiff  minimal_IFD_incomplete.tif  minimal_IFD_not_word_aligned.tif  minimal_IFD_points_outside_filesize.tif  minimal_IFD_with_endless_loop.tif  minimal_empty_IFD.tif  minimal_exifidf_offset_is_zero.tiff  minimal_invalid_type_imagewidth.tif  minimal_offsets_are_zero.tiff  minimal_offsets_multiple_stripoffsets.tif  minimal_offsets_multiple_used.tif  minimal_offsets_not_word_aligned.tif  minimal_tag_is_doubled.tif  minimal_tag_points_outside_filesize.tif  minimal_tag_with_ascii_with_multiple_zeros.tif  minimal_tag_with_ascii_without_byte_zero.tif  minimal_tag_with_contradictory_photometricinterpretation_and_colortag.tiff  minimal_tag_with_count_2M.tif  minimal_tag_with_count_equal_null.tif  minimal_tags_in_wrong_order.tif  minimal_wrong_exififd_type.tif
tiffs_should_fail/broken_icc/: invalid_icc_appl.tif  invalid_icc_lino.tif
tiffs_should_fail/geotiff/: invalid_geoasciiparams_offset.tif  invalid_geoasciiparams_offset_is_0.tif  invalid_geodoubleparams_variables_n-1.tif  invalid_geokeydirectory_offset.tif  invalid_geokeydirectory_variables_is_0.tif  invalid_geokeydirectory_variables_n-4.tif  invalid_geokeydirectory_variables_not_mod4.tif  invalid_modeltiepoint_value.tif
tiffs_should_fail/no_tiff/: README.txt  minimal.jxr  minimal.mdi  minimal.tiff64
tiffs_should_pass/: minimal_valid_12bit.tiff  minimal_valid_16bit.tiff  minimal_valid_baseline.tiff  minimal_valid_multiple_stripoffsets.tif  minimal_valid_tiled.tiff  minimal_valid_with_exif.tiff  minimal_valid_with_icc.tiff
tiffs_should_pass/bigendian/: minimal_valid_baseline_BigEndian.tiff
